nebula/deployment/networking/networkpolicies/naap-development/ingress_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nebula-ingress
  labels:
    contact.productowner: victor.fernandez_at_vodafone.com
    contact.deployment: naapdevops_at_vodafone.com
    contact.team: naapdev_at_vodafone.com
    environment.type: DEV
    environment.up: '09'
    environment.down: '15'
    microservice.localmarket: GROUP
  annotations:
    contact.support: '+447748106038'
    microservice.name: nebula
    microservice.repository: https://github.vodafone.com/VFGroup-NetworkArchitecture-NAAP/nebula.git
    microservice.documentation: https://confluence.sp.vodafone.com/display/NAAP/nebula
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: nebula
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-internal
    - podSelector:
        matchLabels:
          release: nginx-internal
    ports:
    - port: 8080
      protocol: TCP
